--- a/bohcura/package.json
+++ b/bohcura/package.json
@@ -14,6 +14,7 @@
     "react-select": "^3.0.4",
     "redux": "^4.0.4",
     "redux-thunk": "^2.3.0",
+    "semantic-ui-react": "^0.88.0",
     "styled-components": "^4.3.2",
     "yup": "^0.27.0"
   },
